# curio

curio_base/: package.xml  setup.cfg  setup.py
curio_base/config/: base_controller.yaml
curio_base/launch/: base_controller.launch.py  base_failsafe.launch.py  train_classifier.launch.py  train_regressor.launch.py
curio_base/nodes/: curio_base_controller  curio_base_failsafe
curio_base/scripts/: lx16a_cmd_base.py  lx16a_cmd_vel_random.py  lx16a_cmd_vel_sinusoid.py  lx16a_cmd_vel_stepped.py  lx16a_driver_test.py  lx16a_encoder_filter_test.py  lx16a_encoder_logger.py  lx16a_failsafe_test.py  lx16a_mean_filter_test.py  lx16a_odometry_test.py  lx16a_train_classifier.py  lx16a_train_regressor.py
curio_base/src/curio_base/: ackermann_odometry.py  arduino_servo_driver.py  base_controller.py  base_failsafe.py  lx16a_driver.py  lx16a_encoder_filter.py  mean_window_filter.py  python_servo_driver.py  servo.py  utils.py
curio_control/config/: ros2_control_config.yaml
curio_description/: CMakeLists.txt  package.xml
curio_description/launch/: description.launch.py
curio_description/meshes/bases/: body_mast_mount.stl
curio_description/meshes/sensors/: L515.mtl
curio_description/urdf/: curio.urdf.xacro  curio_inertials.xacro  curio_laser.xacro  curio_materials.xacro  curio_realsense.xacro
curio_gazebo/: CMakeLists.txt  package.xml
curio_gazebo/launch/: curio_empty_world.launch.py
curio_gazebo/worlds/: xacro_test.world  xacro_test.world.xacro
