<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>curio_base</name>
  <version>0.2.3</version>
  <description>ROS2 Compatible Hardware controllers for Curio, a Swappy Rover</description>
  <maintainer email="manolofc@gmail.com">Manuel Fernández</maintainer>
  <license>BSD-3-Clause</license>

  <url type="repository">https://github.com/IntelligentRoboticsLabs/curio.git</url>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
  
  <!-- 
  added
    curio_msgs - ported
    rospy - its ros2 equivalent
    std_msgs
    tf - its ros2 equivalent
    geometry_msgs
    nav_msgs
    joint_state_publisher

  TODO
    need to be ported
    curio_description
    curio_control

    <depend>robot_state_publisher</depend>

    <depend>roscpp</depend>
    <depend>serial</depend>
  -->

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>

    <exec_depend>tf2_ros_py</exec_depend>

    <exec_depend>curio_msgs</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
