<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>curio_gazebo</name>
  <version>0.0.1</version>
  <description>ROS2 port of the gazebo simulations for Curio, a Sawppy Rover</description>
  <maintainer email="simonhonigmann@gmail.com">Simon Honigmann</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>launch_ros</depend>
  <depend>curio_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
